Support defining IntervalSchedule in seconds
Signed-off-by: Craig Perkins <cwperx@amazon.com>